syntax = "proto3";

message MyConfig {
    string value = 1;
}
